# simeis

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  metrics.sh
.github/: CODEOWNERS  Dockerfile  README.md  branch-protection-rules.json
.github/templates/: README.md  issue_template.md  pull_request_template.md
.github/workflows/: README.md  advanced-code-analysis.yml  bug-branch-analysis.yml  check-branch-type.yml  check-code-coverage.yml  check-code-quality.yaml  check-pr-base.yml  check-todos.yml  ci.yml  dependencies.yml  release.yml  run-functional-test.yml  rust-ci.yml  verif-quality-code.yml
debian/: changelog  control  install  postinst  prerm  simeis.1  simeis.service
example/rust/src/: main.rs
scripts/: check_todos.py
simeis-data/: Cargo.toml
simeis-data/src/: galaxy.rs  game.rs  industry.rs  market.rs  player.rs  ship.rs  syslog.rs  tests.rs
simeis-data/src/galaxy/: planet.rs  station.rs
simeis-data/src/ship/: resources.rs
simeis-data/src/utils/: shardeddata.rs
simeis-server/: Cargo.toml
simeis-server/src/: main.rs
simeis-server/src/api/: ship.rs
tests/: heavy_tests.py  test_functional.py
