[package]
name = "simeis-data"
version = "0.1.3"
edition = "2021"

[dependencies]
rand_distr = "=0.4.3"

base64 = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[features]
default = []
testing = []
extraspeed = []
heavy-testing = []
